upgrade new experiment notebook
Training simple LSTM-FCNN with raw Handwriting data

--- a/notebooks/202106_spiral_raw_data_exploration.ipynb
+++ b/notebooks/202106_spiral_raw_data_exploration.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -72,9 +72,11 @@
        "      <th>Sexo</th>\n",
        "      <th>TRS</th>\n",
        "      <th>age</th>\n",
+       "      <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>name</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -92,6 +94,7 @@
        "      <td>M</td>\n",
        "      <td>36</td>\n",
        "      <td>74</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T002</th>\n",
@@ -101,6 +104,7 @@
        "      <td>M</td>\n",
        "      <td>40</td>\n",
        "      <td>71</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T002</th>\n",
@@ -110,6 +114,7 @@
        "      <td>M</td>\n",
        "      <td>40</td>\n",
        "      <td>71</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T005</th>\n",
@@ -119,6 +124,7 @@
        "      <td>M</td>\n",
        "      <td>29</td>\n",
        "      <td>69</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T006</th>\n",
@@ -128,6 +134,7 @@
        "      <td>F</td>\n",
        "      <td>19</td>\n",
        "      <td>77</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T008</th>\n",
@@ -137,6 +144,7 @@
        "      <td>F</td>\n",
        "      <td>3</td>\n",
        "      <td>68</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T009</th>\n",
@@ -146,6 +154,7 @@
        "      <td>F</td>\n",
        "      <td>16</td>\n",
        "      <td>66</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T010</th>\n",
@@ -155,6 +164,7 @@
        "      <td>M</td>\n",
        "      <td>16</td>\n",
        "      <td>61</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T012</th>\n",
@@ -164,6 +174,7 @@
        "      <td>F</td>\n",
        "      <td>11</td>\n",
        "      <td>51</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T012</th>\n",
@@ -173,6 +184,7 @@
        "      <td>F</td>\n",
        "      <td>11</td>\n",
        "      <td>51</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T013</th>\n",
@@ -182,6 +194,7 @@
        "      <td>F</td>\n",
        "      <td>3</td>\n",
        "      <td>50</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T015</th>\n",
@@ -191,6 +204,7 @@
        "      <td>M</td>\n",
        "      <td>8</td>\n",
        "      <td>77</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T018</th>\n",
@@ -200,6 +214,7 @@
        "      <td>M</td>\n",
        "      <td>5</td>\n",
        "      <td>47</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T021</th>\n",
@@ -209,6 +224,7 @@
        "      <td>F</td>\n",
        "      <td>3</td>\n",
        "      <td>81</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T023</th>\n",
@@ -218,6 +234,7 @@
        "      <td>F</td>\n",
        "      <td>18</td>\n",
        "      <td>79</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T023</th>\n",
@@ -227,6 +244,7 @@
        "      <td>F</td>\n",
        "      <td>18</td>\n",
        "      <td>79</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T025</th>\n",
@@ -236,6 +254,7 @@
        "      <td>F</td>\n",
        "      <td>2</td>\n",
        "      <td>49</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T027</th>\n",
@@ -245,6 +264,7 @@
        "      <td>M</td>\n",
        "      <td>50</td>\n",
        "      <td>79</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T028</th>\n",
@@ -254,6 +274,7 @@
        "      <td>M</td>\n",
        "      <td>38</td>\n",
        "      <td>75</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T028</th>\n",
@@ -263,6 +284,7 @@
        "      <td>M</td>\n",
        "      <td>38</td>\n",
        "      <td>75</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T029</th>\n",
@@ -272,6 +294,7 @@
        "      <td>F</td>\n",
        "      <td>9</td>\n",
        "      <td>77</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -302,32 +325,32 @@
        "T028  /data/elekin/data/origin/ethw/protocolo_temblo...   \n",
        "T029  /data/elekin/data/origin/ethw/protocolo_temblo...   \n",
        "\n",
-       "                                   relative_path temblor Sexo  TRS  age  \n",
-       "name                                                                     \n",
-       "T001  T001/session00001/u00005s00001_hw00001.svc      si    M   36   74  \n",
-       "T002  T002/session00001/u00006s00001_hw00002.svc      si    M   40   71  \n",
-       "T002  T002/session00001/u00006s00001_hw00001.svc      si    M   40   71  \n",
-       "T005  T005/session00001/u00009s00001_hw00001.svc      si    M   29   69  \n",
-       "T006  T006/session00001/u00010s00001_hw00001.svc      si    F   19   77  \n",
-       "T008  T008/session00001/u00013s00001_hw00001.svc      si    F    3   68  \n",
-       "T009  T009/session00001/u00014s00001_hw00001.svc      si    F   16   66  \n",
-       "T010  T010/session00001/u00015s00001_hw00002.svc      si    M   16   61  \n",
-       "T012  T012/session00001/u00005s00001_hw00001.svc      si    F   11   51  \n",
-       "T012  T012/session00001/u00005s00001_hw00002.svc      si    F   11   51  \n",
-       "T013  T013/session00001/u00006s00001_hw00002.svc      si    F    3   50  \n",
-       "T015  T015/session00001/u00008s00001_hw00002.svc      si    M    8   77  \n",
-       "T018  T018/session00001/u00009s00001_hw00002.svc      si    M    5   47  \n",
-       "T021  T021/session00001/u00014s00001_hw00001.svc      si    F    3   81  \n",
-       "T023  T023/session00001/u00016s00001_hw00001.svc      si    F   18   79  \n",
-       "T023  T023/session00001/u00016s00001_hw00002.svc      si    F   18   79  \n",
-       "T025  T025/session00001/u00017s00001_hw00002.svc      si    F    2   49  \n",
-       "T027  T027/session00001/u00020s00001_hw00002.svc      si    M   50   79  \n",
-       "T028  T028/session00001/u00021s00001_hw00001.svc      si    M   38   75  \n",
-       "T028  T028/session00001/u00021s00001_hw00002.svc      si    M   38   75  \n",
-       "T029  T029/session00001/u00022s00001_hw00002.svc      si    F    9   77  "
+       "                                   relative_path temblor Sexo  TRS  age  level  \n",
+       "name                                                                            \n",
+       "T001  T001/session00001/u00005s00001_hw00001.svc      si    M   36   74      2  \n",
+       "T002  T002/session00001/u00006s00001_hw00002.svc      si    M   40   71      2  \n",
+       "T002  T002/session00001/u00006s00001_hw00001.svc      si    M   40   71      2  \n",
+       "T005  T005/session00001/u00009s00001_hw00001.svc      si    M   29   69      2  \n",
+       "T006  T006/session00001/u00010s00001_hw00001.svc      si    F   19   77      2  \n",
+       "T008  T008/session00001/u00013s00001_hw00001.svc      si    F    3   68      1  \n",
+       "T009  T009/session00001/u00014s00001_hw00001.svc      si    F   16   66      2  \n",
+       "T010  T010/session00001/u00015s00001_hw00002.svc      si    M   16   61      2  \n",
+       "T012  T012/session00001/u00005s00001_hw00001.svc      si    F   11   51      1  \n",
+       "T012  T012/session00001/u00005s00001_hw00002.svc      si    F   11   51      1  \n",
+       "T013  T013/session00001/u00006s00001_hw00002.svc      si    F    3   50      1  \n",
+       "T015  T015/session00001/u00008s00001_hw00002.svc      si    M    8   77      1  \n",
+       "T018  T018/session00001/u00009s00001_hw00002.svc      si    M    5   47      1  \n",
+       "T021  T021/session00001/u00014s00001_hw00001.svc      si    F    3   81      1  \n",
+       "T023  T023/session00001/u00016s00001_hw00001.svc      si    F   18   79      2  \n",
+       "T023  T023/session00001/u00016s00001_hw00002.svc      si    F   18   79      2  \n",
+       "T025  T025/session00001/u00017s00001_hw00002.svc      si    F    2   49      1  \n",
+       "T027  T027/session00001/u00020s00001_hw00002.svc      si    M   50   79      2  \n",
+       "T028  T028/session00001/u00021s00001_hw00001.svc      si    M   38   75      2  \n",
+       "T028  T028/session00001/u00021s00001_hw00002.svc      si    M   38   75      2  \n",
+       "T029  T029/session00001/u00022s00001_hw00002.svc      si    F    9   77      1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +593,7 @@
        "9  1743  5319     1889774437       0         0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
