Review DCT features extraction

--- a/notebooks/202110_spiral_extracted_features_exploration.ipynb
+++ b/notebooks/202110_spiral_extracted_features_exploration.ipynb
@@ -1,11 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discrete Cosine Transform for the Analysis of Essential Tremor, extracted features\n",
+    "\n",
+    "## Purpose\n",
+    "\n",
+    "It has proven to be very hard to reproduce the results from [Discrete Cosine Transform for the Analysis of Essential Tremor](https://www.frontiersin.org/articles/10.3389/fphys.2018.01947/full)\n",
+    "\n",
+    "I have implemented Discrete Cosine Transformation and the features described in the paper above. The features have been extracted from raw WACOM dataset and saved as HDF5 file to facilitate the reproducibility of this notebook. \n",
+    "\n",
+    "Experiment implementation from paper publication was done in Matlab. This experiment source code was implemented in python and the results and source code is public and open:\n",
+    "https://github.com/spolex/spiral\n",
+    "\n",
+    "According to the paper results and discussion section the maximum accuracy was $85.71\\%$ obtained for the residue method with 17 coefficients, while for the radius method the best accuracy was $75.51\\%$. An improvement of $10\\%$ was achieved using the cosine transform apporach, instead of working directly with the radius."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Importing packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from os import path\n",
@@ -20,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loading previously extracted features from radius and residues from Discrete Cosine Transform. They were in hdf5 format. The file contains the following datasets:\n",
+    "Loading previously extracted features from radius and residues from Discrete Cosine Transform. They were in hdf5 format. The file contains the following labels (datasets):\n",
     "\n",
     "* /source/dataset: origin raw data\n",
     "* /source/labels: original labels ET-1 and CT-0\n",
@@ -43,10 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO include data inside of Docker container for reproducibility purposes\n",
     "num_coeff=17\n",
     "root_path = \"/data/elekin/data\"\n",
     "rdo_root_path = path.join(root_path,\"results/handwriting\")\n",
@@ -64,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +93,7 @@
        "[Text(0, 0, 'CT'), Text(1, 0, 'ET')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,8 +116,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading residues and features extracted from residues"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +336,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,13 +351,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extracted features. \n",
-    "Pending to extract in case we needed entropy based features and autocorrelation "
+    "### Extracted features. \n",
+    "\n",
+    "#### Temporal features\n",
+    "\n",
+    "| Temporal Features| Descriptor | Funtion |\n",
+    "| --- | --- | --- |\n",
+    "| Sample Entropy (SENT) | m=3, r=2 |  **pending** |\n",
+    "| Mean absolute value (MAV) | $$\\frac{1}{N}\\sum_{i=1}^{N}{|X_{i}|} $$ | mean_abs_val(L) |\n",
+    "| Variance (VAR) | $$\\frac{1}{N-1}\\sum_{i=1}^{N}{|X_{i} - µ |^{2}} $$ |  np.var(L) |\n",
+    "| Root Mean Square (RMS) |  $$ \\sum_{i=1}^{N}{\\frac{1}{N}X_{i}^{2}} $$  |  root_mean_square(L) |\n",
+    "| Log Detector (LOG) | $$ \\exp^{ \\frac{1}{N} \\sum_{i=1}^{N}{\\log{|X_{i}|}} } $$ | log_detector(L) |\n",
+    "| Waveform length (WL) | | wl(L) |\n",
+    "| Standard deviation (STD) | | np.nanstd(L) |\n",
+    "| Difference Absolute standard deviation (ACC) |||\n",
+    "\n",
+    "#### Frequency features\n",
+    "\n",
+    "1. Wilson amplitude (WAMP)\n",
+    "4. Maximum fractal length (MFL)\n",
+    "5. Fractal dimension (FD)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "The paper deeps dive on several number of features tested and experimentally obtaining the best performance using the top 5-predictor rank features. The 5 characteristics selected in residue method are the following, sorted according to their importance\n",
+    "\n",
+    "1. Mean frecuency (MNF)\n",
+    "2. Wilson amplitude (WAMP)\n",
+    "3. Mean absolute value (MAV)\n",
+    "4. Maximum fractal length (MFL)\n",
+    "5. Fractal dimension (FD)\n",
+    "\n",
+    "//TODO It is still pending to extract in case we needed **entropy based features and autocorrelation** \n",
+    "\n",
+    "* Sample Entropy (SENT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +406,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
