--- a/notebooks/202110_spiral_dl_et_data_loading_header-hdf5.ipynb
+++ b/notebooks/202110_spiral_dl_et_data_loading_header-hdf5.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "HDFStore=pd.HDFStore\n",
     "\n",
     "import tensorflow as tf\n",
@@ -13,72 +14,60 @@
     "import tensorflow_docs as tfdocs\n",
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras import regularizers\n",
+    "from os import path\n",
     "\n",
-    "from utils import config\n"
+    "import config\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loading data parameters\n",
-    "num_coefficients=int(config[\"coefficients\"])\n",
-    "root_path=config[\"root_path\"]\n",
-    "hw_results_path= config[\"hw_results_path\"]\n",
-    "\n",
-    "# training parameters\n",
-    "seed=int(config[\"seed\"]) if \"seed\" in config.keys() else 42\n",
-    "\n",
-    "dr=float(config[\"dropout\"]) if \"dropout\" in config.keys() else 0.2\n",
-    "lr2=float(config[\"lr2\"]) if \"lr2\" in config.keys() else 1e-3\n",
-    "lr1=float(config[\"lr1\"]) if \"lr1\" in config.keys() else 1e-4\n",
-    "lr=float(config[\"lr\"]) if \"lr\" in config.keys() else 8e-4\n",
-    "\n",
-    "num_epochs=int(config[\"num_epochs\"]) if \"num_epochs\" in config.keys() else 1000\n",
-    "num_features=int(config[\"features\"]) if \"features\" in config.keys() else 4096\n",
-    "mini_batch_size=int(config[\"mini_batch_size\"]) if \"mini_batch_size\" in config.keys() else 4\n",
-    "\n",
-    "main_units=int(config[\"main_units\"]) if \"main_units\" in config.keys() else 64\n",
-    "secondary_units=int(config[\"secondary_units\"]) if \"secondary_units\" in config.keys() else 16\n",
-    "last_unit=int(config[\"last_unit\"]) if \"last_unit\" in config.keys() else 8\n",
-    "lstm_units=int(config[\"lstm_units\"]) if \"lstm_units\" in config.keys() else 64\n",
-    "num_classes=int(config[\"num_classes\"]) if \"num_classes\" in config.keys() else 1\n",
-    "\n",
-    "\n",
-    "print_sample=False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/elekin/data/results/03-HANDWRITTING/archimedean-17-splits.h5\n"
+      "/data/elekin/data/results/handwriting/archimedean-17-splits.h5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['/residues/train/features',\n",
+       "['/results/residues/rd/norm/std/window',\n",
+       " '/results/residues/rd/norm/std/window/x_test',\n",
+       " '/results/residues/rd/norm/std/window/x_train',\n",
+       " '/results/residues/rd/norm/std/window/y_test',\n",
+       " '/results/residues/rd/norm/std/window/y_train',\n",
+       " '/results/residues/features/norm',\n",
+       " '/results/residues/features/norm/x_test',\n",
+       " '/results/residues/features/norm/x_train',\n",
+       " '/results/residues/features/norm/y_test',\n",
+       " '/results/residues/features/norm/y_train',\n",
+       " '/results/radius/r/norm/std/window',\n",
+       " '/results/radius/r/norm/std/window/x_test',\n",
+       " '/results/radius/r/norm/std/window/x_train',\n",
+       " '/results/radius/r/norm/std/window/y_test',\n",
+       " '/results/radius/r/norm/std/window/y_train',\n",
+       " '/results/radius/features/norm',\n",
+       " '/results/radius/features/norm/x_test',\n",
+       " '/results/radius/features/norm/x_train',\n",
+       " '/results/radius/features/norm/y_test',\n",
+       " '/results/radius/features/norm/y_train',\n",
+       " '/residues/train/features',\n",
        " '/residues/train/labels',\n",
        " '/residues/test/features',\n",
        " '/residues/test/labels']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Load data from hdf5 file\n",
-    "rdo_root_path = path.join(root_path,hw_results_path)\n",
+    "rdo_root_path = path.join(config.root_path,config.hw_results_path)\n",
     "h5file = path.join(rdo_root_path, \"archimedean-\")\n",
     "h5filename = h5file + str(num_coefficients) + \"-splits.h5\"\n",
     "print(h5filename)\n",
@@ -88,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -118,17 +107,17 @@
        "<CacheDataset shapes: ((None, 4096), (None, 1)), types: (tf.float32, tf.int8)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).take(len(x_train)).batch(mini_batch_size).prefetch(2).cache()\n",
-    "test_dataset = tf.data.Dataset.from_tensor_slices((x_test, y_test)).take(len(x_test)).batch(mini_batch_size).prefetch(2).cache()\n",
-    "steps_per_epoch = round(len(train_dataset)/mini_batch_size)\n",
+    "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train)).take(len(x_train)).batch(config.mini_batch_size).prefetch(2).cache()\n",
+    "test_dataset = tf.data.Dataset.from_tensor_slices((x_test, y_test)).take(len(x_test)).batch(config.mini_batch_size).prefetch(2).cache()\n",
+    "steps_per_epoch = round(len(train_dataset)/config.mini_batch_size)\n",
     "\n",
-    "if print_sample:\n",
+    "if config.print_sample:\n",
     "    for feat, targ in test_dataset.take(10):\n",
     "        print ('Features test: {}, Target: {}'.format(feat, targ))\n",
     "\n",
@@ -137,7 +126,7 @@
     "\n",
     "print(\"{0} train batches and {1} test batches of {2} mini batch size and {3} steps per epoch\".format(len(train_dataset), \n",
     "                                                                              len(test_dataset),\n",
-    "                                                                              mini_batch_size,\n",
+    "                                                                              config.mini_batch_size,\n",
     "                                                                                steps_per_epoch))\n",
     "test_dataset"
    ]
@@ -159,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
