--- a/notebooks/IN_PROGRESS_202011_spiral_tf_ds_w_data_augmentation_lstm.ipynb
+++ b/notebooks/IN_PROGRESS_202011_spiral_tf_ds_w_data_augmentation_lstm.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current tracking uri: file:///./mlruns\n"
+      "Current tracking uri: file:///./mlruns\n",
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
      ]
     }
    ],
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -321,16 +323,101 @@
       "Trainable params: 26,537\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Epoch 1/10000\n",
-      "      3/Unknown - 2s 251ms/step - loss: 0.2441 - accuracy: 0.5833WARNING:tensorflow:Callback method `on_train_batch_begin` is slow compared to the batch time (batch time: 0.0021s vs `on_train_batch_begin` time: 0.0575s). Check your callbacks.\n",
-      "WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0021s vs `on_train_batch_end` time: 0.0254s). Check your callbacks.\n",
-      "42/42 [==============================] - 70s 2s/step - loss: 0.0538 - accuracy: 0.9699 - val_loss: 0.2815 - val_accuracy: 0.6033\n",
+      "Epoch 1/5\n",
+      "      3/Unknown - 1s 207ms/step - loss: 0.3970 - accuracy: 0.0000e+00WARNING:tensorflow:Callback method `on_train_batch_begin` is slow compared to the batch time (batch time: 0.0019s vs `on_train_batch_begin` time: 0.0481s). Check your callbacks.\n",
+      "WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0019s vs `on_train_batch_end` time: 0.0203s). Check your callbacks.\n",
+      "42/42 [==============================] - 32s 766ms/step - loss: 0.2706 - accuracy: 0.2530 - val_loss: 0.2487 - val_accuracy: 0.5998\n",
       "\n",
-      "Epoch: 0, accuracy:0.9699,  loss:0.0538,  val_accuracy:0.6033,  val_loss:0.2815,  \n",
-      ".Epoch 2/10000\n",
-      "42/42 [==============================] - 31s 745ms/step - loss: 0.0338 - accuracy: 1.0000 - val_loss: 0.2874 - val_accuracy: 0.6033\n",
-      ".Epoch 3/10000\n",
-      "34/42 [=======================>......] - ETA: 0s - loss: 0.0294 - accuracy: 1.0000"
+      "Epoch: 0, accuracy:0.2530,  loss:0.2706,  val_accuracy:0.5998,  val_loss:0.2487,  \n",
+      ".Epoch 2/5\n",
+      "42/42 [==============================] - 31s 746ms/step - loss: 0.2295 - accuracy: 1.0000 - val_loss: 0.2444 - val_accuracy: 0.5999\n",
+      ".Epoch 3/5\n",
+      "42/42 [==============================] - 30s 740ms/step - loss: 0.2048 - accuracy: 1.0000 - val_loss: 0.2416 - val_accuracy: 0.6001\n",
+      ".Epoch 4/5\n",
+      "42/42 [==============================] - 30s 726ms/step - loss: 0.1826 - accuracy: 1.0000 - val_loss: 0.2400 - val_accuracy: 0.6002\n",
+      ".Epoch 5/5\n",
+      "42/42 [==============================] - 30s 735ms/step - loss: 0.1628 - accuracy: 1.0000 - val_loss: 0.2397 - val_accuracy: 0.6002\n",
+      "."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as lstm_cell_layer_call_and_return_conditional_losses, lstm_cell_layer_call_fn, lstm_cell_layer_call_fn, lstm_cell_layer_call_and_return_conditional_losses, lstm_cell_layer_call_and_return_conditional_losses while saving (showing 5 of 5). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /tmp/tmp21gt30mc/model/data/model/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /tmp/tmp21gt30mc/model/data/model/assets\n",
+      "2021/10/24 10:46:19 ERROR mlflow.utils.environment: Encountered an unexpected error while inferring pip requirements (model URI: /tmp/tmp21gt30mc/model, flavor: keras)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/environment.py\", line 212, in infer_pip_requirements\n",
+      "    return _infer_requirements(model_uri, flavor)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/requirements_utils.py\", line 263, in _infer_requirements\n",
+      "    modules = _capture_imported_modules(model_uri, flavor)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/requirements_utils.py\", line 232, in _capture_imported_modules\n",
+      "    json.dumps(sys.path),\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/requirements_utils.py\", line 173, in _run_command\n",
+      "    raise MlflowException(msg)\n",
+      "mlflow.exceptions.MlflowException: Encountered an unexpected error while running ['/usr/bin/python3', '/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py', '--model-path', '/tmp/tmp21gt30mc/model', '--flavor', 'keras', '--output-file', '/tmp/tmpsfvnbei7/imported_modules.txt', '--sys-path', '[\"/usr/lib/python36.zip\", \"/usr/local/lib/python3.6/dist-packages/git/ext/gitdb\", \"/usr/lib/python3.6\", \"/usr/lib/python3.6/lib-dynload\", \"\", \"/usr/local/lib/python3.6/dist-packages\", \"/usr/lib/python3/dist-packages\", \"/usr/local/lib/python3.6/dist-packages/IPython/extensions\", \"/root/.ipython\", \"/usr/local/lib/python3.6/dist-packages/gitdb/ext/smmap\"]']\n",
+      "exit status: 1\n",
+      "stdout: \n",
+      "stderr: /usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/backend.py:435: UserWarning: `tf.keras.backend.set_learning_phase` is deprecated and will be removed after 2020-10-11. To update it, simply pass a True/False value to the `training` argument of the `__call__` method of your layer or model.\n",
+      "  warnings.warn('`tf.keras.backend.set_learning_phase` is deprecated and '\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py\", line 125, in <module>\n",
+      "    main()\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py\", line 112, in main\n",
+      "    mlflow.pyfunc.load_model(model_path)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/pyfunc/__init__.py\", line 667, in load_model\n",
+      "    model_impl = importlib.import_module(conf[MAIN])._load_pyfunc(data_path)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py\", line 109, in _load_pyfunc_patch\n",
+      "    return original(*args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/keras.py\", line 548, in _load_pyfunc\n",
+      "    path, keras_module=keras_module, save_format=save_format, compile=should_compile\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/keras.py\", line 473, in _load_model\n",
+      "    return keras_models.load_model(model_path, custom_objects=custom_objects, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/save.py\", line 206, in load_model\n",
+      "    return saved_model_load.load(filepath, compile, options)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 155, in load\n",
+      "    keras_loader.finalize_objects()\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 626, in finalize_objects\n",
+      "    self._reconstruct_all_models()\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 645, in _reconstruct_all_models\n",
+      "    self._reconstruct_model(model_id, model, layers)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 681, in _reconstruct_model\n",
+      "    model.__init__(layers, name=config['name'])\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/base.py\", line 522, in _method_wrapper\n",
+      "    result = method(self, *args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/sequential.py\", line 141, in __init__\n",
+      "    self.add(layer)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/base.py\", line 522, in _method_wrapper\n",
+      "    result = method(self, *args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/sequential.py\", line 228, in add\n",
+      "    output_tensor = layer(self.outputs[0])\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 970, in __call__\n",
+      "    input_list)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 1108, in _functional_construction_call\n",
+      "    inputs, input_masks, args, kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 840, in _keras_tensor_symbolic_call\n",
+      "    return self._infer_output_signature(inputs, args, kwargs, input_masks)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 880, in _infer_output_signature\n",
+      "    outputs = call_fn(inputs, *args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/layers/core.py\", line 919, in call\n",
+      "    result = self.function(inputs, **kwargs)\n",
+      "  File \"<ipython-input-14-6cd93e462ee9>\", line 6, in <lambda>\n",
+      "NameError: name 'tf' is not defined\n",
+      "\n"
      ]
     }
    ],
