--- a/notebooks/202105_spiral_read_metadata.ipynb
+++ b/notebooks/202105_spiral_read_metadata.ipynb
@@ -233,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -247,7 +247,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2681c09b164cd0bed2d26ac7ffed7e5f854687b9195dbb8740749a2c38759e17"
+   }
   }
  },
  "nbformat": 4,
