Finally delete heavy cuda file to be able to push

--- a/notebooks/202208_spiral_dl_et_data_loading_header-hdf5.ipynb
+++ b/notebooks/202208_spiral_dl_et_data_loading_header-hdf5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,20 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "import tensorflow_docs as tfdocs\n",
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras import regularizers\n",
     "from os import path\n",
     "\n",
-    "import config\n"
+    "import config\n",
+    "\n",
+    "num_coefficients=17\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +63,7 @@
        " '/residues/test/labels']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,10 +107,10 @@
     {
      "data": {
       "text/plain": [
-       "<CacheDataset shapes: ((None, 4096), (None, 1)), types: (tf.float32, tf.int8)>"
+       "<CacheDataset element_spec=(TensorSpec(shape=(None, 4096), dtype=tf.float32, name=None), TensorSpec(shape=(None, 1), dtype=tf.int8, name=None))>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
