--- a/notebooks/IN_PROGRESS_202011_spiral_tf_ds_w_data_augmentation_lstm.ipynb
+++ b/notebooks/IN_PROGRESS_202011_spiral_tf_ds_w_data_augmentation_lstm.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current tracking uri: file:///./mlruns\n",
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
+      "Current tracking uri: http://mlflow_server:5001\n"
      ]
     }
    ],
@@ -23,9 +29,6 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras import regularizers\n",
     "\n",
-    "import tensorflow_docs as tfdocs\n",
-    "import tensorflow_docs.modeling\n",
-    "import tensorflow_docs.plots\n",
     "\n",
     "from utils import windowed_dataset, build_basic_lstm,split_train_test,split_train_test_val\n",
     "from config import *\n",
@@ -37,7 +40,7 @@
     "import datetime\n",
     "\n",
     "import mlflow\n",
-    "mlflow.set_tracking_uri(\"file:///./mlruns\")\n",
+    "mlflow.set_tracking_uri(\"http://mlflow_server:5001\")\n",
     "tracking_uri = mlflow.get_tracking_uri()\n",
     "print(\"Current tracking uri: {}\".format(tracking_uri))\n",
     "\n",
@@ -54,24 +57,12 @@
     "r_feat_filename='tmp_radius_feat_{}.csv'.format(today)\n",
     "r_feat_norm_filename='tmp_radius_feat_norm_{}.csv'.format(today)\n",
     "\n",
-    "binary_labels_filename ='tmp_spiral_binaly_labels_{}.csv'.format(today)\n",
-    "\n",
-    "%load_ext tensorboard"
+    "binary_labels_filename ='tmp_spiral_binaly_labels_{}.csv'.format(today)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clear any logs from previous runs\n",
-    "!rm -rf ./tensorflow_logs/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -92,7 +83,7 @@
        "(53, 4096)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +136,7 @@
        " TensorSpec(shape=(1,), dtype=tf.int8, name=None))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,10 +203,8 @@
     "\n",
     "def get_callbacks(name):\n",
     "    return [\n",
-    "        tfdocs.modeling.EpochDots(),\n",
     "        earlystop_callback,\n",
     "        tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=50, min_delta=1e-1),\n",
-    "        tf.keras.callbacks.TensorBoard('tensorflow_log'),\n",
     "      ]\n",
     "\n",
     "def compile_and_fit(model, train_dataset, test_dataset, name, optimizer=None, max_epochs=1000):\n",
@@ -242,182 +231,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-5ebfde54a45a38c0\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-5ebfde54a45a38c0\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%tensorboard --logdir tensorflow_log/fit/"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'),\n",
-       " PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "size_histories = {}\n",
-    "tf.config.list_physical_devices()"
+    "size_histories = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022/08/24 20:30:19 WARNING mlflow.utils.autologging_utils: You are using an unsupported version of tensorflow. If you encounter errors during autologging, try upgrading / downgrading tensorflow to a supported version, or try upgrading MLflow.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "lambda (Lambda)              (None, 1, 820)            0         \n",
-      "_________________________________________________________________\n",
-      "lstm (LSTM)                  (None, 8)                 26528     \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 1)                 9         \n",
+      " lambda (Lambda)             (None, 1, 820)            0         \n",
+      "                                                                 \n",
+      " lstm (LSTM)                 (None, 8)                 26528     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 9         \n",
+      "                                                                 \n",
       "=================================================================\n",
       "Total params: 26,537\n",
       "Trainable params: 26,537\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/5\n",
-      "      3/Unknown - 1s 207ms/step - loss: 0.3970 - accuracy: 0.0000e+00WARNING:tensorflow:Callback method `on_train_batch_begin` is slow compared to the batch time (batch time: 0.0019s vs `on_train_batch_begin` time: 0.0481s). Check your callbacks.\n",
-      "WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0019s vs `on_train_batch_end` time: 0.0203s). Check your callbacks.\n",
-      "42/42 [==============================] - 32s 766ms/step - loss: 0.2706 - accuracy: 0.2530 - val_loss: 0.2487 - val_accuracy: 0.5998\n",
-      "\n",
-      "Epoch: 0, accuracy:0.2530,  loss:0.2706,  val_accuracy:0.5998,  val_loss:0.2487,  \n",
-      ".Epoch 2/5\n",
-      "42/42 [==============================] - 31s 746ms/step - loss: 0.2295 - accuracy: 1.0000 - val_loss: 0.2444 - val_accuracy: 0.5999\n",
-      ".Epoch 3/5\n",
-      "42/42 [==============================] - 30s 740ms/step - loss: 0.2048 - accuracy: 1.0000 - val_loss: 0.2416 - val_accuracy: 0.6001\n",
-      ".Epoch 4/5\n",
-      "42/42 [==============================] - 30s 726ms/step - loss: 0.1826 - accuracy: 1.0000 - val_loss: 0.2400 - val_accuracy: 0.6002\n",
-      ".Epoch 5/5\n",
-      "42/42 [==============================] - 30s 735ms/step - loss: 0.1628 - accuracy: 1.0000 - val_loss: 0.2397 - val_accuracy: 0.6002\n",
-      "."
+      "      1/Unknown - 2s 2s/step - loss: 0.1871 - accuracy: 0.7500WARNING:tensorflow:Callback method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0017s vs `on_train_batch_end` time: 0.0066s). Check your callbacks.\n",
+      "42/42 [==============================] - 69s 2s/step - loss: 0.0820 - accuracy: 0.9940 - val_loss: 0.2643 - val_accuracy: 0.6033\n",
+      "Epoch 2/5\n",
+      "42/42 [==============================] - 37s 910ms/step - loss: 0.0530 - accuracy: 1.0000 - val_loss: 0.2699 - val_accuracy: 0.6033\n",
+      "Epoch 3/5\n",
+      "42/42 [==============================] - 38s 932ms/step - loss: 0.0459 - accuracy: 1.0000 - val_loss: 0.2756 - val_accuracy: 0.6033\n",
+      "Epoch 4/5\n",
+      "42/42 [==============================] - 38s 922ms/step - loss: 0.0398 - accuracy: 1.0000 - val_loss: 0.2810 - val_accuracy: 0.6033\n",
+      "Epoch 5/5\n",
+      "42/42 [==============================] - 38s 916ms/step - loss: 0.0348 - accuracy: 1.0000 - val_loss: 0.2861 - val_accuracy: 0.6033\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:absl:Found untraced functions such as lstm_cell_layer_call_and_return_conditional_losses, lstm_cell_layer_call_fn, lstm_cell_layer_call_fn, lstm_cell_layer_call_and_return_conditional_losses, lstm_cell_layer_call_and_return_conditional_losses while saving (showing 5 of 5). These functions will not be directly callable after loading.\n"
+      "WARNING:absl:Found untraced functions such as lstm_cell_layer_call_fn, lstm_cell_layer_call_and_return_conditional_losses while saving (showing 2 of 2). These functions will not be directly callable after loading.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmp21gt30mc/model/data/model/assets\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmpyttlw7ap/model/data/model/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmp21gt30mc/model/data/model/assets\n",
-      "2021/10/24 10:46:19 ERROR mlflow.utils.environment: Encountered an unexpected error while inferring pip requirements (model URI: /tmp/tmp21gt30mc/model, flavor: keras)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/environment.py\", line 212, in infer_pip_requirements\n",
-      "    return _infer_requirements(model_uri, flavor)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/requirements_utils.py\", line 263, in _infer_requirements\n",
-      "    modules = _capture_imported_modules(model_uri, flavor)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/requirements_utils.py\", line 232, in _capture_imported_modules\n",
-      "    json.dumps(sys.path),\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/requirements_utils.py\", line 173, in _run_command\n",
-      "    raise MlflowException(msg)\n",
-      "mlflow.exceptions.MlflowException: Encountered an unexpected error while running ['/usr/bin/python3', '/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py', '--model-path', '/tmp/tmp21gt30mc/model', '--flavor', 'keras', '--output-file', '/tmp/tmpsfvnbei7/imported_modules.txt', '--sys-path', '[\"/usr/lib/python36.zip\", \"/usr/local/lib/python3.6/dist-packages/git/ext/gitdb\", \"/usr/lib/python3.6\", \"/usr/lib/python3.6/lib-dynload\", \"\", \"/usr/local/lib/python3.6/dist-packages\", \"/usr/lib/python3/dist-packages\", \"/usr/local/lib/python3.6/dist-packages/IPython/extensions\", \"/root/.ipython\", \"/usr/local/lib/python3.6/dist-packages/gitdb/ext/smmap\"]']\n",
-      "exit status: 1\n",
-      "stdout: \n",
-      "stderr: /usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/backend.py:435: UserWarning: `tf.keras.backend.set_learning_phase` is deprecated and will be removed after 2020-10-11. To update it, simply pass a True/False value to the `training` argument of the `__call__` method of your layer or model.\n",
-      "  warnings.warn('`tf.keras.backend.set_learning_phase` is deprecated and '\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py\", line 125, in <module>\n",
-      "    main()\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py\", line 112, in main\n",
-      "    mlflow.pyfunc.load_model(model_path)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/pyfunc/__init__.py\", line 667, in load_model\n",
-      "    model_impl = importlib.import_module(conf[MAIN])._load_pyfunc(data_path)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/utils/_capture_modules.py\", line 109, in _load_pyfunc_patch\n",
-      "    return original(*args, **kwargs)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/keras.py\", line 548, in _load_pyfunc\n",
-      "    path, keras_module=keras_module, save_format=save_format, compile=should_compile\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/mlflow/keras.py\", line 473, in _load_model\n",
-      "    return keras_models.load_model(model_path, custom_objects=custom_objects, **kwargs)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/save.py\", line 206, in load_model\n",
-      "    return saved_model_load.load(filepath, compile, options)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 155, in load\n",
-      "    keras_loader.finalize_objects()\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 626, in finalize_objects\n",
-      "    self._reconstruct_all_models()\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 645, in _reconstruct_all_models\n",
-      "    self._reconstruct_model(model_id, model, layers)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/saving/saved_model/load.py\", line 681, in _reconstruct_model\n",
-      "    model.__init__(layers, name=config['name'])\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/base.py\", line 522, in _method_wrapper\n",
-      "    result = method(self, *args, **kwargs)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/sequential.py\", line 141, in __init__\n",
-      "    self.add(layer)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/base.py\", line 522, in _method_wrapper\n",
-      "    result = method(self, *args, **kwargs)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/sequential.py\", line 228, in add\n",
-      "    output_tensor = layer(self.outputs[0])\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 970, in __call__\n",
-      "    input_list)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 1108, in _functional_construction_call\n",
-      "    inputs, input_masks, args, kwargs)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 840, in _keras_tensor_symbolic_call\n",
-      "    return self._infer_output_signature(inputs, args, kwargs, input_masks)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\", line 880, in _infer_output_signature\n",
-      "    outputs = call_fn(inputs, *args, **kwargs)\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/layers/core.py\", line 919, in call\n",
-      "    result = self.function(inputs, **kwargs)\n",
-      "  File \"<ipython-input-14-6cd93e462ee9>\", line 6, in <lambda>\n",
-      "NameError: name 'tf' is not defined\n",
-      "\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmpyttlw7ap/model/data/model/assets\n"
      ]
     }
    ],
@@ -529,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
