--- a/notebooks/202208-sliding_window_with_pandas_tutorial.ipynb
+++ b/notebooks/202208-sliding_window_with_pandas_tutorial.ipynb
@@ -1273,9 +1273,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python385jvsc74a57bd09e9430257f5c0dbbd32efd525c816c550c1452ad5a57e8448e0cba5c34188d48"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1287,7 +1287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
