--- a/notebooks/202208_spiral_generate_partial_metadata_to_csv.ipynb
+++ b/notebooks/202208_spiral_generate_partial_metadata_to_csv.ipynb
@@ -7,7 +7,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from os import path"
+    "from os import path\n",
+    "\n",
+    "doc_path = \"/data/elekin/doc\"\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -19,15 +23,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: xlrd==1.2.0 in /usr/local/lib/python3.6/dist-packages (1.2.0)\n",
-      "\u001b[33mWARNING: You are using pip version 20.2.4; however, version 21.1.2 is available.\n",
+      "Requirement already satisfied: openpyxl in /usr/local/lib/python3.8/dist-packages (3.0.10)\n",
+      "Requirement already satisfied: et-xmlfile in /usr/local/lib/python3.8/dist-packages (from openpyxl) (1.1.0)\n",
+      "\u001b[33mWARNING: You are using pip version 20.2.4; however, version 22.2.2 is available.\n",
       "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install xlrd==1.2.0"
+    "pip install openpyxl"
    ]
   },
   {
@@ -39,11 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-ecc15805103f>:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  filtered_ki_df = ki_df.iloc[:,:6].drop('MoCA',1)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -369,7 +382,7 @@
        "T077                C104      no        1964.0    F   NaN"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -939,7 +952,7 @@
        "T029               True  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,11 +967,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-5-f5cf5564c574>:6: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  metadata = metadata.drop('registro tableta',1)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1769,7 +1790,7 @@
        "control7      no             0  NaN    0  2015  "
       ]
      },
-     "execution_count": 249,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,11 +1808,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata.to_csv(path.join(doc_path,\"metadata-202106.csv\"))"
+    "import datetime\n",
+    "\n",
+    "today=datetime.date.today().strftime(\"%Y%m%d\")\n",
+    "metadata.to_csv(path.join(doc_path,\"metadata-202106_{}.csv\".format(today)))"
    ]
   }
  ],
@@ -1811,7 +1835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
