--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -21,7 +30,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas_profiling\n",
+      "  Downloading pandas_profiling-3.2.0-py2.py3-none-any.whl (262 kB)\n",
+      "\u001b[K     |████████████████████████████████| 262 kB 1.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting requests>=2.24.0\n",
+      "  Downloading requests-2.28.1-py3-none-any.whl (62 kB)\n",
+      "\u001b[K     |████████████████████████████████| 62 kB 336 kB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting multimethod>=1.4\n",
+      "  Downloading multimethod-1.8-py3-none-any.whl (9.8 kB)\n",
+      "Collecting pydantic>=1.8.1\n",
+      "  Downloading pydantic-1.9.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.8 MB)\n",
+      "\u001b[K     |████████████████████████████████| 12.8 MB 4.0 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: PyYAML>=5.0.0 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (5.4.1)\n",
+      "Collecting phik>=0.11.1\n",
+      "  Downloading phik-0.12.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (696 kB)\n",
+      "\u001b[K     |████████████████████████████████| 696 kB 4.0 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting tqdm>=4.48.2\n",
+      "  Downloading tqdm-4.64.0-py2.py3-none-any.whl (78 kB)\n",
+      "\u001b[K     |████████████████████████████████| 78 kB 761 kB/s eta 0:00:011\n",
+      "\u001b[?25hRequirement already satisfied: seaborn>=0.10.1 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (0.11.1)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (1.22.4)\n",
+      "Requirement already satisfied: scipy>=1.4.1 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (1.9.0)\n",
+      "Collecting htmlmin>=0.1.12\n",
+      "  Downloading htmlmin-0.1.12.tar.gz (19 kB)\n",
+      "Collecting visions[type_image_path]==0.7.4\n",
+      "  Downloading visions-0.7.4-py3-none-any.whl (102 kB)\n",
+      "\u001b[K     |████████████████████████████████| 102 kB 2.4 MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: jinja2>=2.11.1 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (3.1.2)\n",
+      "Requirement already satisfied: matplotlib>=3.2.0 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (3.5.2)\n",
+      "Collecting missingno>=0.4.2\n",
+      "  Downloading missingno-0.5.1-py3-none-any.whl (8.7 kB)\n",
+      "Requirement already satisfied: joblib~=1.1.0 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (1.1.0)\n",
+      "Requirement already satisfied: pandas!=1.0.0,!=1.0.1,!=1.0.2,!=1.1.0,>=0.25.3 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (1.4.3)\n",
+      "Collecting tangled-up-in-unicode==0.2.0\n",
+      "  Downloading tangled_up_in_unicode-0.2.0-py3-none-any.whl (4.7 MB)\n",
+      "\u001b[K     |████████████████████████████████| 4.7 MB 1.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: markupsafe~=2.1.1 in /usr/local/lib/python3.8/dist-packages (from pandas_profiling) (2.1.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests>=2.24.0->pandas_profiling) (1.26.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/lib/python3/dist-packages (from requests>=2.24.0->pandas_profiling) (2019.11.28)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/lib/python3/dist-packages (from requests>=2.24.0->pandas_profiling) (2.8)\n",
+      "Collecting charset-normalizer<3,>=2\n",
+      "  Downloading charset_normalizer-2.1.1-py3-none-any.whl (39 kB)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.8/dist-packages (from pydantic>=1.8.1->pandas_profiling) (4.2.0)\n",
+      "Requirement already satisfied: attrs>=19.3.0 in /usr/local/lib/python3.8/dist-packages (from visions[type_image_path]==0.7.4->pandas_profiling) (21.4.0)\n",
+      "Collecting networkx>=2.4\n",
+      "  Downloading networkx-2.8.6-py3-none-any.whl (2.0 MB)\n",
+      "\u001b[K     |████████████████████████████████| 2.0 MB 2.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting imagehash; extra == \"type_image_path\"\n",
+      "  Downloading ImageHash-4.2.1.tar.gz (812 kB)\n",
+      "\u001b[K     |████████████████████████████████| 812 kB 4.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: Pillow; extra == \"type_image_path\" in /usr/local/lib/python3.8/dist-packages (from visions[type_image_path]==0.7.4->pandas_profiling) (9.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.8/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (0.11.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.8/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (21.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (1.4.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.8/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (4.33.3)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib>=3.2.0->pandas_profiling) (3.0.9)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.8/dist-packages (from pandas!=1.0.0,!=1.0.1,!=1.0.2,!=1.1.0,>=0.25.3->pandas_profiling) (2022.2.1)\n",
+      "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from imagehash; extra == \"type_image_path\"->visions[type_image_path]==0.7.4->pandas_profiling) (1.14.0)\n",
+      "Collecting PyWavelets\n",
+      "  Downloading PyWavelets-1.3.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (6.9 MB)\n",
+      "\u001b[K     |████████████████████████████████| 6.9 MB 3.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hBuilding wheels for collected packages: htmlmin, imagehash\n",
+      "  Building wheel for htmlmin (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for htmlmin: filename=htmlmin-0.1.12-py3-none-any.whl size=27080 sha256=8ce177763ca8b968d2b1fe33896ced65c4d0746fbe914cf3d53bc0ebf56fdc34\n",
+      "  Stored in directory: /root/.cache/pip/wheels/23/14/6e/4be5bfeeb027f4939a01764b48edd5996acf574b0913fe5243\n",
+      "  Building wheel for imagehash (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for imagehash: filename=ImageHash-4.2.1-py2.py3-none-any.whl size=295188 sha256=3aca12d193502a9b6c464eb85ffbc8873617ec3d4e7a08729bff59bb5a1a5583\n",
+      "  Stored in directory: /root/.cache/pip/wheels/48/a1/7f/096c1269d6bf78d4768180602579b35a1e8cb1250bb4b40c74\n",
+      "Successfully built htmlmin imagehash\n",
+      "Installing collected packages: charset-normalizer, requests, multimethod, pydantic, phik, tqdm, htmlmin, tangled-up-in-unicode, networkx, PyWavelets, imagehash, visions, missingno, pandas-profiling\n",
+      "  Attempting uninstall: requests\n",
+      "    Found existing installation: requests 2.22.0\n",
+      "    Uninstalling requests-2.22.0:\n",
+      "      Successfully uninstalled requests-2.22.0\n",
+      "Successfully installed PyWavelets-1.3.0 charset-normalizer-2.1.1 htmlmin-0.1.12 imagehash-4.2.1 missingno-0.5.1 multimethod-1.8 networkx-2.8.6 pandas-profiling-3.2.0 phik-0.12.2 pydantic-1.9.2 requests-2.28.1 tangled-up-in-unicode-0.2.0 tqdm-4.64.0 visions-0.7.4\n",
+      "\u001b[33mWARNING: You are using pip version 20.2.4; however, version 22.2.2 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandas_profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -52,7 +156,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "add749fb385e450c96469dd6e4d2344b",
+       "model_id": "c0ec3d9e955340669e4e0e0c8d69240d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,27 +168,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/pandas/core/strings.py:1541: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  f = lambda x: regex.split(x, maxsplit=n)\n",
-      "/usr/local/lib/python3.6/dist-packages/pandas/core/strings.py:1541: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  f = lambda x: regex.split(x, maxsplit=n)\n",
-      "/usr/local/lib/python3.6/dist-packages/pandas/core/strings.py:1541: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  f = lambda x: regex.split(x, maxsplit=n)\n",
-      "/usr/local/lib/python3.6/dist-packages/pandas/core/strings.py:1541: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  f = lambda x: regex.split(x, maxsplit=n)\n",
-      "/usr/local/lib/python3.6/dist-packages/pandas/core/strings.py:1541: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  f = lambda x: regex.split(x, maxsplit=n)\n",
-      "/usr/local/lib/python3.6/dist-packages/pandas/core/strings.py:1541: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  f = lambda x: regex.split(x, maxsplit=n)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0a45e52c8ce4a73a96ea3384c2cd0cd",
+       "model_id": "4c233c1a11a74374aa83dd0350b68238",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +184,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63d295348e0045d7a9028dce3352d1b0",
+       "model_id": "30e87613c5c34a38a0dc767df63e662c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2d54a39dcb94c2698d4569af049d14f",
+       "model_id": "8fb09fd7c8744fd183acbc0d94cb9960",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +211,7 @@
     }
    ],
    "source": [
-    "pdpf.ProfileReport(meta_df).to_file(path.join(doc_path,\"spiral-meta-profiling.html\"))\n"
+    "pdpf.ProfileReport(meta_df).to_file(doc_path+\"/spiral-meta-profiling.html\")\n"
    ]
   },
   {
@@ -147,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
