--- a/notebooks/testing_cv.ipynb
+++ b/notebooks/testing_cv.ipynb
@@ -23,11 +23,20 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import mlflow\n",
-    "mlflow.set_tracking_uri(\"http://mlflow_server:5000/\")\n",
-    "mlflow.set_experiment(\"/archimedes-ml\")\n",
+    "#import mlflow\n",
+    "#mlflow.set_tracking_uri(\"http://mlflow_server:5000/\")\n",
+    "#mlflow.set_experiment(\"/archimedes-ml\")\n",
     "# enable autologging\n",
-    "mlflow.sklearn.autolog()"
+    "#mlflow.sklearn.autolog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /data"
    ]
   },
   {
@@ -583,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
